Made search dataset box show up after configurable score threshold

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -7,5 +7,6 @@ data:
   web.json: '{
     {{- if .Values.fallbackUrl -}} "fallbackUrl": {{ .Values.fallbackUrl | quote }}, {{- end -}}
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
-    "baseUrl": {{ .Values.baseUrl | default "/" | quote }}
+    "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
+    "datasetSearchSuggestionScoreThreshold": {{ .Values.datasetSearchSuggestionScoreThreshold }}
   }'
