--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -20,12 +20,14 @@
     "@magda/scripts": "^0.0.49-0",
     "@types/jsonpath": "^0.1.29",
     "@types/lodash": "^4.14.66",
+    "@types/nock": "^9.3.0",
     "@types/node": "^8.0.14",
     "@types/request": "^2.0.0",
     "@types/urijs": "^1.15.34",
     "@types/xml2js": "0.0.33",
     "@types/xmldom": "^0.1.29",
     "@types/yargs": "^6.6.0",
+    "nock": "^10.0.0",
     "ts-loader": "^2.3.7",
     "typescript": "~2.5.0",
     "webpack": "^3.6.0"
