Set external url of service so oauth redirects point to right callback url.

--- a/deploy/helm/magda/requirements.yaml
+++ b/deploy/helm/magda/requirements.yaml
@@ -71,6 +71,7 @@ dependencies:
 # Deprecated or not currently used services
   - name: admin-api
     tags:
+      - all
       - admin-api
 
 # Minions
