--- a/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
@@ -25,7 +25,8 @@ spec:
             "--imageTag", {{ .Values.image.tag | default .Values.global.image.tag }},
             "--pullPolicy", {{ .Values.global.image.pullPolicy }},
             "--kubernetesApiType", "cluster",
-            "--userId", {{ .Values.global.defaultAdminUserId | quote }}
+            "--userId", {{ .Values.global.defaultAdminUserId | quote }},
+            "--namespace", {{ .Values.global.namespace }}
         ]
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
