--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -41,7 +41,8 @@
     "@gov.au/select": "^2.0.5",
     "@gov.au/skip-link": "^2.0.6",
     "@gov.au/tags": "^3.1.1",
-    "@gov.au/text-inputs": "^2.0.6"
+    "@gov.au/text-inputs": "^2.0.6",
+    "leaflet": "^0.7.7"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.49-0",
@@ -82,7 +83,6 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
-    "leaflet": "^0.7.7",
     "leaflet-mapbox-vector-tile": "github:TerriaJS/Leaflet.MapboxVectorTile",
     "lodash": "^4.17.10",
     "lodash.debounce": "^4.0.8",
