--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.49-0",
+    "@types/mustache": "^0.8.31",
+    "@types/request": "^2.47.1",
+    "@types/request-promise-native": "^1.0.15",
     "body-parser": "^1.13.2",
     "email-validator": "^2.0.3",
     "express": "^4.13.1",
@@ -24,8 +27,11 @@
     "lodash": "^4.17.10",
     "markdown-it": "^8.4.1",
     "mocha": "^5.1.1",
+    "mustache": "^3.0.0",
     "nodemailer": "^4.6.4",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
