--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -16,3 +16,4 @@ resources:
 disableAuthenticationFeatures: false
 datasetSearchSuggestionScoreThreshold: 65
 service: {}
+useLocalStyleSheet: false
