removed cors from scala.

--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -22,6 +22,9 @@ gateway:
     enabled: false
   enableAuthEndpoint: true
   ckanRedirectionDomain: "ckan.data.gov.au"
+  cors:
+    credentials: true
+    origin: true
   csp:
     directives:
       scriptSrc:
