--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -29,6 +29,7 @@ gateway:
     googleClientId: "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com"
   cors:
     credentials: true
+    origin: true
   helmet:
     frameguard: false
   csp:
