--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.49-0",
+    "@types/mime-types": "^2.1.0",
+    "@types/urijs": "^1.15.38",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "mime-type": "^3.0.5",
     "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
+    "urijs": "^1.19.1",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
