--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -16,21 +16,30 @@
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.49-0",
+    "@types/fs-extra": "^5.0.4",
+    "@types/mime-types": "^2.1.0",
     "@types/request": "^2.47.1",
     "@types/request-promise-native": "^1.0.15",
+    "@types/type-is": "^1.6.2",
+    "@types/urijs": "^1.15.38",
     "body-parser": "^1.13.2",
     "email-validator": "^2.0.3",
     "express": "^4.13.1",
+    "fs-extra": "^7.0.0",
     "html-to-text": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
     "markdown-it": "^8.4.1",
+    "mime-types": "^2.1.20",
     "mocha": "^5.1.1",
     "mustache": "^3.0.0",
     "nodemailer": "^4.6.4",
     "pug": "^2.0.3",
+    "recursive-readdir": "^2.2.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "type-is": "^1.6.16",
+    "urijs": "^1.19.1",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
@@ -47,6 +56,7 @@
     "@types/node": "^8.0.14",
     "@types/nodemailer": "^4.6.0",
     "@types/pug": "^2.0.4",
+    "@types/recursive-readdir": "^2.2.0",
     "@types/sinon": "^4.3.3",
     "@types/supertest": "^2.0.4",
     "@types/yargs": "^8.0.2",
@@ -62,6 +72,8 @@
       "name": "data61/magda-correspondence-api",
       "include": "node_modules dist templates Dockerfile"
     },
+    "jwtSecret": "squirrel",
+    "userId": "00000000-0000-4000-8000-000000000000",
     "externalUrl": "http://localhost:6101"
   },
   "magda": {
