Removed frameguard from previews

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -12,6 +12,7 @@ autoscaler:
   targetCPUUtilizationPercentage: 80
 
 enableAuthEndpoint: false
+enableWebAccessControl: false
 
 helmet:
   frameguard: false
