--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -22,6 +22,8 @@ gateway:
     enabled: false
   enableAuthEndpoint: true
   ckanRedirectionDomain: "ckan.data.gov.au"
+  helmet:
+    frameguard: false
   cors:
     credentials: true
     origin: true
@@ -51,6 +53,7 @@ gateway:
       - allow-forms
       - allow-popups-to-escape-sandbox
       reportUri: https://sdga.report-uri.com/r/d/csp/enforce
+      
 combined-db:
   waleBackup:
     method: WAL
