allow gateway redirect trailing slash

--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -46,6 +46,7 @@ routes:
     to: http://correspondence-api/v0/public
   apidocs:
     to: http://apidocs-server/
+    redirectTrailingSlash: true
 helmet: {}
 
 csp:
