--- a/magda-apidocs-server/package.json
+++ b/magda-apidocs-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/apidocs-server",
   "description": "The MAGDA in-browser api documentation.",
-  "version": "0.0.49-0",
+  "version": "0.0.49-RC1",
   "license": "Apache-2.0",
   "scripts": {
     "build": "generate-api-documentation --config $PWD/apidoc.json --output $PWD/build",
@@ -10,7 +10,7 @@
     "retag-and-push": "retag-and-push"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.49-0"
+    "@magda/scripts": "^0.0.49-RC1"
   },
   "config": {
     "docker": {
