--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.3",
     "ejs": "^2.3.3",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.15.3",
     "express-basic-auth": "^1.1.5",
     "express-session": "^1.11.3",
@@ -51,6 +52,7 @@
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.1",
     "@types/ejs": "^2.3.33",
+    "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.0.37",
     "@types/http-proxy": "^1.16.0",
     "@types/lodash": "^4.14.74",
