--- a/magda-minion-format/tsconfig.json
+++ b/magda-minion-format/tsconfig.json
@@ -4,13 +4,13 @@
         "baseUrl": ".",
         "paths": {
             "@magda/registry-aspects/dist/*": [
-                "./node_modules/@magda/registry-aspects/src/*"
+                "../node_modules/@magda/registry-aspects/src/*"
             ],
             "@magda/minion-framework/dist/*": [
-                "./node_modules/@magda/minion-framework/src/*"
+                "../node_modules/@magda/minion-framework/src/*"
             ],
             "@magda/typescript-common/dist/*": [
-                "./node_modules/@magda/typescript-common/src/*"
+                "../node_modules/@magda/typescript-common/src/*"
             ]
         }
     }
