--- a/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
@@ -26,8 +26,7 @@ spec:
             "--pullPolicy", {{ .Values.global.image.pullPolicy }},
             "--kubernetesApiType", "cluster",
             "--userId", {{ .Values.global.defaultAdminUserId | quote }},
-            "--namespace", {{ .Values.global.namespace }},
-            "--gapiId", {{ .Values.global.gapiId }}
+            "--namespace", {{ .Values.global.namespace }}
         ]
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
