--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -70,7 +70,7 @@
   "config": {
     "docker": {
       "name": "data61/magda-correspondence-api",
-      "include": "node_modules dist emailTpls Dockerfile"
+      "include": "node_modules dist emailTemplates Dockerfile"
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000",
