--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -115,6 +115,7 @@
     "react-autosuggest": "^9.3.2",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.3.2",
+    "react-ga": "^2.5.3",
     "react-json-tree": "^0.10.9",
     "react-modal": "^3.4.5",
     "react-particles-js": "^2.1.0",
