--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/magda-scss-compiler",
   "description": "The web-client SCSS compiler pod",
-  "version": "0.0.49-RC2",
+  "version": "0.0.50-0",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -14,7 +14,7 @@
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.49-RC2",
+    "@magda/scripts": "^0.0.50-0",
     "@types/chai": "^4.0.1",
     "@types/clean-css": "^3.4.30",
     "@types/config": "0.0.32",
@@ -38,8 +38,8 @@
     "typescript": "~2.5.0"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.49-RC2",
-    "@magda/web-client": "^0.0.49-RC2",
+    "@magda/typescript-common": "^0.0.50-0",
+    "@magda/web-client": "^0.0.50-0",
     "clean-css": "^4.2.1",
     "escape-string-regexp": "^1.0.5",
     "fs-extra": "^7.0.0",
