allow a CKAN non-root path to be used for redirects

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -23,6 +23,7 @@ ingress:
 
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
+  ckanRedirectionPath: ""
   enableAuthEndpoint: true
   auth:
     facebookClientId: "173073926555600"
