Refactored arg to be array
Placed analytics file into central module

--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -13,8 +13,7 @@ global:
   logLevel: INFO
   noDbAuth: false
   namespace: default
-  gapiIds: 
-    - UA-92539508-3
+  gapiIds: []
 
 tags:
   all: true
