--- a/magda-search-api/package.json
+++ b/magda-search-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/search-api",
-  "version": "0.0.48-RC2",
+  "version": "0.0.48",
   "description": "The search API.",
   "license": "Apache-2.0",
   "scripts": {
