changes during deployment attempts: - db password secret changes - google load balance prob url fix - create-secrets tool should save file content to data field

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       - name: gateway
         image: {{ template "dockerimage" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy | default .Values.global.image.pullPolicy }}
+        ports:
+        - containerPort: {{ .Values.service.internalPort }}
         command: [
             "node",
             "/usr/src/app/component/dist/index.js",
