Performed some changes to make #1762 easier:
* Reorganised content api to require less number of requests to get small JSON content items
* Changed some existing content ids to group things better

--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.4",
     "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
+    "wildcard": "^1.1.2",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
