--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -17,6 +17,7 @@
     "@types/mime-types": "^2.1.0",
     "@types/urijs": "^1.15.38",
     "body-parser": "^1.13.2",
+    "djv": "^2.1.1",
     "express": "^4.13.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
