--- a/deploy/helm/magda/charts/web-server/values.yaml
+++ b/deploy/helm/magda/charts/web-server/values.yaml
@@ -17,3 +17,4 @@ disableAuthenticationFeatures: false
 datasetSearchSuggestionScoreThreshold: 65
 service: {}
 useLocalStyleSheet: false
+contentApiBaseUrlInternal: "http://content-api/"
