--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -42,7 +42,8 @@
     "@gov.au/skip-link": "^2.0.6",
     "@gov.au/tags": "^3.1.1",
     "@gov.au/text-inputs": "^2.0.6",
-    "leaflet": "^0.7.7"
+    "leaflet": "^0.7.7",
+    "urijs": "^1.19.1"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.50-0",
