Added ckan redirection path to helm

--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
             {{- if .Values.ckanRedirectionDomain }}
             "--ckanRedirectionDomain", {{ .Values.ckanRedirectionDomain | quote }},
             {{- end }}
+            {{- if .Values.ckanRedirectionPath }}
+            "--ckanRedirectionPath", {{ .Values.ckanRedirectionPath | quote }},
+            {{- end }}
             "--dbHost", "session-db",
             "--dbPort", "5432",
 {{- if .Values.auth.facebookClientId }}
