--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.50-0",
+    "@types/autoprefixer-core": "^5.1.30",
     "@types/chai": "^4.0.1",
     "@types/clean-css": "^3.4.30",
     "@types/config": "0.0.32",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@magda/typescript-common": "^0.0.50-0",
     "@magda/web-client": "^0.0.50-0",
+    "autoprefixer-core": "^6.0.1",
     "clean-css": "^4.2.1",
     "escape-string-regexp": "^1.0.5",
     "fs-extra": "^7.0.0",
