--- a/deploy/helm/magda-nginx-ingress-controller/charts/nginx-ingress-controller/templates/service.yaml
+++ b/deploy/helm/magda-nginx-ingress-controller/charts/nginx-ingress-controller/templates/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/client-body-buffer-size: 10M
+    nginx.ingress.kubernetes.io/proxy-body-size: 10M
 spec:
   externalTrafficPolicy: Local
   type: LoadBalancer
