remove datasetSearchSuggestionScoreThreshold from helm files

--- a/deploy/helm/magda/charts/web-server/templates/configmap.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/configmap.yaml
@@ -8,6 +8,5 @@ data:
     {{- if .Values.fallbackUrl -}} "fallbackUrl": {{ .Values.fallbackUrl | quote }}, {{- end -}}
     {{- if .Values.contentApiBaseUrlInternal -}} "contentApiBaseUrlInternal": {{ .Values.contentApiBaseUrlInternal | quote }}, {{- end -}}
     "disableAuthenticationFeatures": {{ .Values.disableAuthenticationFeatures }},
-    "baseUrl": {{ .Values.baseUrl | default "/" | quote }},
-    "datasetSearchSuggestionScoreThreshold": {{ .Values.datasetSearchSuggestionScoreThreshold }}
+    "baseUrl": {{ .Values.baseUrl | default "/" | quote }}
   }'
