- fixed nullable string field index error - set default value for chart tag

--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -24,6 +24,7 @@ tags:
   combined-db: false
   content-api: false
   content-db: false
+  correspondence-api: false
   elasticsearch: false
   gateway: false
   indexer: false
