--- a/magda-apidocs-server/default.conf
+++ b/magda-apidocs-server/default.conf
@@ -3,6 +3,24 @@ server {
     server_name  localhost;
     add_header Content-Security-Policy "default-src * 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';";
 
+    location /healthz {
+      access_log off;
+      default_type text/plain;
+      return 200 "OK\n";
+    }
+
+    location /status/live {
+      access_log off;
+      default_type text/plain;
+      return 200 "OK\n";
+    }
+
+    location /status/ready {
+      access_log off;
+      default_type application/json;
+      return 200 "{\"ready\": true}";
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
