--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -p tsconfig-build.json --watch",
     "start": "node dist/index.js",
     "dev": "run-typescript-in-nodemon src/index.ts",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
+    "test": "nyc mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
     "retag-and-push": "retag-and-push"
@@ -37,6 +37,7 @@
     "lodash": "^4.17.4",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
+    "nyc": "^13.1.0",
     "sinon": "^4.2.1",
     "supertest": "^3.0.0",
     "typescript": "~2.5.0"
@@ -54,5 +55,13 @@
     "categories": {
       "api": true
     }
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "src/test/**"
+    ]
   }
 }
