--- a/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
@@ -31,10 +31,17 @@ spec:
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           httpGet:
-            path: /v0/healthz
+            path: /v0/status/live
             port: 80
-          initialDelaySeconds: 30
-          periodSeconds: 60
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /v0/status/ready
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 10
           timeoutSeconds: 10
 {{- end }}
         resources:
