--- a/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
@@ -26,7 +26,14 @@ spec:
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           httpGet:
-            path: /v0/public/users/{{ .Values.global.defaultAdminUserId }}
+            path: /v0/status/live
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /v0/status/ready
             port: 80
           initialDelaySeconds: 10
           periodSeconds: 10
