--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -9,7 +9,7 @@
     "dev": "run-typescript-in-nodemon src/index.ts",
     "docker-build-local": "create-docker-context-for-node-component --build --push --tag auto --local",
     "docker-build-prod": "create-docker-context-for-node-component --build --push --tag auto",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
+    "test": "nyc mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\"",
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
@@ -21,7 +21,8 @@
     "kubernetes-client": "3.17.2",
     "lodash": "^4.17.4",
     "util.promisify": "^1.0.0",
-    "yargs": "^8.0.2"
+    "yargs": "^8.0.2",
+    "nyc": "^13.1.0"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.51-0",
@@ -58,5 +59,13 @@
     "categories": {
       "api": true
     }
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "src/test/**"
+    ]
   }
 }
