--- a/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
@@ -20,6 +20,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 10
       affinity:
+        {{ include "magda.antiPreemptibleAffinity" . }}
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 50
