--- a/deploy/helm/magda/charts/authorization-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/authorization-db/templates/statefulset.yaml
@@ -15,6 +15,8 @@ spec:
         service: authorization-db
     spec:
       terminationGracePeriodSeconds: 60
+      affinity:
+        {{ include "magda.antiPreemptibleAffinity" . }}
       containers:
       - name: authorization-db
         resources:
