--- a/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
@@ -15,6 +15,8 @@ spec:
         service: content-db
     spec:
       terminationGracePeriodSeconds: 60
+      affinity:
+        {{ include "magda.antiPreemptibleAffinity" . }}
       containers:
       - name: content-db
         resources:
