--- a/deploy/helm/magda/charts/registry-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/registry-db/templates/statefulset.yaml
@@ -15,6 +15,8 @@ spec:
         service: registry-db
     spec:
       terminationGracePeriodSeconds: 10
+      affinity:
+        {{ include "magda.antiPreemptibleAffinity" . }}
       containers:
       - name: registry-db
         resources:
