--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -22,6 +22,7 @@
     "@types/lodash": "^4.14.66",
     "@types/nock": "^9.3.0",
     "@types/node": "^8.0.14",
+    "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.0.0",
     "@types/urijs": "^1.15.34",
     "@types/xml2js": "0.0.33",
@@ -38,6 +39,7 @@
     "jsonpath": "^0.2.11",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "read-pkg-up": "^3.0.0",
     "request": "^2.79.0",
     "urijs": "^1.18.12",
     "xml2js": "^0.4.17",
@@ -48,7 +50,7 @@
     "registryUrl": "http://localhost:6101/v0",
     "docker": {
       "name": "data61/magda-csw-connector",
-      "include": "node_modules aspect-templates dist Dockerfile"
+      "include": "node_modules aspect-templates dist Dockerfile package.json"
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000"
