--- a/magda-dap-connector/package.json
+++ b/magda-dap-connector/package.json
@@ -20,6 +20,7 @@
     "@magda/scripts": "^0.0.50-0",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.14",
+    "@types/read-pkg-up": "^3.0.1",
     "@types/request": "^2.0.0",
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^6.6.0",
@@ -37,6 +38,7 @@
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "moment": "^2.17.1",
+    "read-pkg-up": "^3.0.0",
     "request": "^2.79.0",
     "urijs": "^1.18.12",
     "yargs": "^8.0.1"
@@ -45,7 +47,7 @@
     "registryUrl": "http://localhost:6101/v0",
     "docker": {
       "name": "data61/magda-dap-connector",
-      "include": "node_modules aspect-templates dist Dockerfile"
+      "include": "node_modules aspect-templates dist Dockerfile package.json"
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000"
