--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -25,6 +25,7 @@
     "@types/mocha": "^2.2.41",
     "@types/nock": "^8.2.1",
     "@types/node-sass": "^3.10.32",
+    "@types/read-pkg-up": "^3.0.1",
     "@types/recursive-readdir": "^2.2.0",
     "@types/request": "2.47.0",
     "@types/sinon": "^2.3.3",
@@ -45,6 +46,7 @@
     "clean-css": "^4.2.1",
     "escape-string-regexp": "^1.0.5",
     "fs-extra": "^7.0.0",
+    "read-pkg-up": "^3.0.0",
     "postcss": "^7.0.5",
     "recursive-readdir": "^2.2.2",
     "request": "2.85.0",
@@ -55,7 +57,7 @@
   "config": {
     "docker": {
       "name": "data61/magda-scss-compiler",
-      "include": "node_modules dist Dockerfile setup.sh"
+      "include": "node_modules dist Dockerfile setup.sh package.json"
     },
     "jwtSecret": "squirrel",
     "userId": "00000000-0000-4000-8000-000000000000"
