intercept content API res loading not through fetch API

--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -83,7 +83,9 @@
     "history": "^4.7.2",
     "html-truncate": "^1.2.2",
     "immutable": "^3.8.1",
+    "is-base64": "^0.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "js-base64": "^2.4.8",
     "js-cookie": "^2.2.0",
     "leaflet-mapbox-vector-tile": "github:TerriaJS/Leaflet.MapboxVectorTile",
     "lodash": "^4.17.10",
