--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -22,6 +22,7 @@
     "prepare": "pancake"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@gov.au/accordion": "^3.0.5",
     "@gov.au/animate": "^1.0.0",
     "@gov.au/body": "^2.0.7",
