--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -22,7 +22,6 @@
     "prepare": "pancake"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
     "@gov.au/accordion": "^3.0.5",
     "@gov.au/animate": "^1.0.0",
     "@gov.au/body": "^2.0.7",
@@ -43,6 +42,7 @@
     "@gov.au/skip-link": "^2.0.6",
     "@gov.au/tags": "^3.1.1",
     "@gov.au/text-inputs": "^2.0.6",
+    "core-js": "^2.5.7",
     "i18next": "^11.10.1",
     "is-url-external": "^1.0.3",
     "leaflet": "^0.7.7",
