changes on gateway helm chart to turn off redirection

--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -21,6 +21,7 @@ gateway:
   autoscaler:
     enabled: false
   enableAuthEndpoint: true
+  enableHttpsRedirection: true
   ckanRedirectionDomain: "ckan.data.gov.au"
   ckanRedirectionPath: ""
   helmet:
