- neater config - if json config format is invalid, throw an exception

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -99,7 +99,10 @@ correspondence-api:
   smtpPort: 2525
 
 minion-broken-link:
-  domainWaitTimeConfig: '{"data.csiro.au":60,"data.gov.au":60,"data.act.gov.au":30}'
+  domainWaitTimeConfig:
+    data.csiro.au: 60
+    data.gov.au: 60
+    data.act.gov.au: 30
 
 connectors:
   config:
