Changes based on PR feedback

--- a/deploy/helm/magda/charts/search-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/search-api/templates/deployment.yaml
@@ -30,9 +30,9 @@ spec:
 {{- if .Values.global.enableLivenessProbes }}
         livenessProbe:
           httpGet:
-            path: /v0/status/live
+            path: /v0/datasets
             port: 80
-          initialDelaySeconds: 10
+          initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 10
         readinessProbe:
