Nudged around response processing in broken link minion.

--- a/deploy/helm/magda/charts/minion-broken-link/values.yaml
+++ b/deploy/helm/magda/charts/minion-broken-link/values.yaml
@@ -1,4 +1,8 @@
 image: {}
+domainWaitTimeConfig:
+  data.csiro.au: 60
+  data.gov.au: 60
+  data.act.gov.au: 30
 resources:
   requests:
     cpu: 50m
