Create New analyzer for region

--- a/magda-elastic-search/Dockerfile
+++ b/magda-elastic-search/Dockerfile
@@ -3,6 +3,7 @@ FROM quay.io/pires/docker-elasticsearch-kubernetes:6.3.0
 ADD component/elasticsearch.yml /elasticsearch/config/elasticsearch.yml
 ADD component/setup.sh /setup.sh
 COPY component/wn_s.pl /elasticsearch/config/analysis/wn_s.pl
+COPY component/regionSynonyms.txt /elasticsearch/config/analysis/regionSynonyms.txt
 RUN apk add --no-cache --update curl procps
 ENV REPO /snapshots
 
