--- a/magda-elastic-search/package.json
+++ b/magda-elastic-search/package.json
@@ -14,7 +14,7 @@
   "config": {
     "docker": {
       "name": "data61/magda-elasticsearch",
-      "include": "Dockerfile elasticsearch.yml setup.sh wn_s.pl"
+      "include": "Dockerfile elasticsearch.yml setup.sh wn_s.pl regionSynonyms.txt"
     },
     "regionSources": {
       "SA4": {
