Issue/1874 Added preemption priority classes

--- a/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         service: admin-api
     spec:
+      priorityClassName: magda-7
       containers:
       - name: admin-api
         image: {{ template "dockerimage" . }}
