--- a/deploy/helm/magda/charts/cloud-sql-proxy/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/cloud-sql-proxy/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         service: cloud-sql-proxy
     spec:
+      priorityClassName: magda-9
       containers:
       - name: cloud-sql-proxy
         image: gcr.io/cloudsql-docker/gce-proxy:1.11
