--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         service: gateway
     spec:
+      priorityClassName: magda-10
       containers:
       - name: gateway
         image: {{ template "dockerimage" . }}
