--- a/deploy/helm/magda/charts/search-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/search-api/templates/deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         service: search-api
     spec:
+      priorityClassName: magda-8
       containers:
       - name: search-api
         image: {{ template "dockerimage" . }}
