--- a/deploy/helm/magda/charts/web-server/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/web-server/templates/deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         service: web
     spec:
+      priorityClassName: magda-7
       containers:
       - name: web
         command: [
