--- a/deploy/helm/magda/charts/content-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         service: content-api
     spec:
+      priorityClassName: magda-8
       containers:
       - name: content-api
         image: {{ template "dockerimage" . }}
