--- a/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         service: content-db
     spec:
+      priorityClassName: magda-9
       terminationGracePeriodSeconds: 60
       affinity:
         {{ include "magda.antiPreemptibleAffinity" . }}
