--- a/deploy/helm/magda/charts/registry-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/registry-db/templates/statefulset.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         service: registry-db
     spec:
+      priorityClassName: magda-9
       terminationGracePeriodSeconds: 10
       affinity:
         {{ include "magda.antiPreemptibleAffinity" . }}
