--- a/deploy/helm/magda/charts/session-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/session-db/templates/statefulset.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         service: session-db
     spec:
+      priorityClassName: magda-10
       terminationGracePeriodSeconds: 60
       affinity:
         {{ include "magda.antiPreemptibleAffinity" . }}
