Fixed default config.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -44,7 +44,7 @@ authorization {
 webhooks {
   actorTickRate = 2000
   retryInterval = 3600000
-  maxEvents = 10
+  eventPageSize = 10
 }
 
 # How long to wait for a DELETE /records/?sourceTagToPreserve=x&sourceId=y call before returning a processing status code in ms
