Priority adjustment based on PR feedback

--- a/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/master-deployment.yml
@@ -17,6 +17,7 @@ spec:
         component: elasticsearch
         role: master
     spec:
+      priorityClassName: magda-9
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
