Made registry hook processing asynchronous.

--- a/magda-registry-api/src/main/resources/application.conf
+++ b/magda-registry-api/src/main/resources/application.conf
@@ -42,6 +42,24 @@ authorization {
 }
 
 webhooks {
+  # Some web hook messages may start tasks that are long blocking calls, those tasks
+  # will be executed in this dedicated and fixed size thread pool to avoid depleting
+  # the resources. The fixed pool size may need some fine-tuning.
+  AllWebHooksActor-dispatcher {
+    type = Dispatcher
+    executor = "thread-pool-executor"
+    thread-pool-executor {
+        fixed-pool-size = 16
+    }
+    throughput = 1
+  }
+
+  # The SingleWebHookActor will buffer some long processing messages
+  # in this queue to free up its mailbox so that it can process other
+  # short processing messages promptly.
+  # The value may need some fine-tuning.
+  SingleWebHookActorSourceQueueSize = 1000
+
   actorTickRate = 2000
   retryInterval = 3600000
   eventPageSize = 10
