--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,9 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "Launch Admin API",
-            "runtimeExecutable":
-                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
             },
             "runtimeArgs": ["src/index.ts"],
             "args": [],
@@ -26,8 +24,7 @@
             "name": "Launch Project Open Data Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -49,8 +46,7 @@
             "name": "Launch CSW Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -70,11 +66,9 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "Minion Format",
-            "runtimeExecutable":
-                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -101,8 +95,7 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "magda-admin-api tests",
-            "program":
-                "${workspaceRoot}/magda-admin-api/node_modules/mocha/bin/_mocha",
+            "program": "${workspaceRoot}/magda-admin-api/node_modules/mocha/bin/_mocha",
             "cwd": "${workspaceRoot}/magda-admin-api",
             "args": [
                 "--compilers",
@@ -147,8 +140,7 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "minion-linked-data-rating",
-            "program":
-                "${workspaceRoot}/magda-minion-linked-data-rating/node_modules/mocha/bin/_mocha",
+            "program": "${workspaceRoot}/magda-minion-linked-data-rating/node_modules/mocha/bin/_mocha",
             "cwd": "${workspaceRoot}/magda-minion-linked-data-rating",
             "args": [
                 "--compilers",
@@ -195,8 +187,7 @@
             "name": "Launch Gateway",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -233,8 +224,7 @@
             "name": "Launch Web Server",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
@@ -249,8 +239,7 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "Launch Auth API",
-            "runtimeExecutable":
-                "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
+            "runtimeExecutable": "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
             "cwd": "${workspaceRoot}/magda-authorization-api",
             "args": [
                 "src/index.ts",
@@ -272,8 +261,7 @@
                 "SESSION_SECRET": "keyboard cat",
                 "FACEBOOK_CLIENT_ID": "173073926555600",
                 "FACEBOOK_CLIENT_SECRET": "none",
-                "GOOGLE_CLIENT_ID":
-                    "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com",
+                "GOOGLE_CLIENT_ID": "275237095477-f7ej2gsvbl2alb8bcqcn7r5jk0ur719p.apps.googleusercontent.com",
                 "GOOGLE_CLIENT_SECRET": "none"
             }
         },
@@ -307,8 +295,7 @@
             "request": "launch",
             "protocol": "inspector",
             "name": "create-docker-context-for-node-component",
-            "program":
-                "${workspaceRoot}/scripts/create-docker-context-for-node-component.js",
+            "program": "${workspaceRoot}/scripts/create-docker-context-for-node-component.js",
             "cwd": "${workspaceRoot}/magda-gateway",
             "args": ["--output", "foo.tar.gz"]
         },
@@ -319,8 +306,7 @@
             "name": "Ckan Connector",
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
             "windows": {
-                "runtimeExecutable":
-                    "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
+                "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node.cmd"
             },
             "args": [
                 "-r",
