--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^7.4.1",
     "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
-    "yargs": "^8.0.2"
+    "yargs": "^8.0.2",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.51-0",
@@ -34,7 +35,6 @@
     "@types/supertest": "^2.0.4",
     "@types/yargs": "^8.0.2",
     "chai": "^4.1.2",
-    "lodash": "^4.17.4",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
     "nyc": "^13.1.0",
