--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -45,7 +45,8 @@
     "read-pkg-up": "^3.0.0",
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
-    "yargs": "^8.0.2"
+    "yargs": "^8.0.2",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "@magda/scripts": "^0.0.51-0",
@@ -75,7 +76,6 @@
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
     "randomstring": "^1.1.5",
-    "request": "^2.79.0",
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
     "typescript": "~2.5.0"
