--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/gateway",
   "description": "The public gateway to all of MAGDA, including the API and web front end.",
-  "version": "0.0.50-RC3",
+  "version": "0.0.50",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -15,7 +15,7 @@
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register --require tsconfig-paths/register \"src/test/**/*.spec.ts\""
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.50-RC3",
+    "@magda/typescript-common": "^0.0.50",
     "body-parser": "^1.13.2",
     "cheerio": "^0.22.0",
     "compression": "^1.7.2",
@@ -48,7 +48,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.50-RC3",
+    "@magda/scripts": "^0.0.50",
     "@types/chai": "^4.0.1",
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.1",
