- Added `enableCkanRedirection` switch - Made sure empty or blank (or .disabled = true) routes will be filtered out safely in gateway - Added required packages for aff login

--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -24,6 +24,7 @@ ingress:
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
   ckanRedirectionPath: ""
+  enableCkanRedirection: true
   enableAuthEndpoint: true
   enableHttpsRedirection: true
   auth:
