--- a/deploy/helm/magda/charts/gateway/values.yaml
+++ b/deploy/helm/magda/charts/gateway/values.yaml
@@ -13,6 +13,7 @@ autoscaler:
 
 enableAuthEndpoint: false
 enableWebAccessControl: false
+enableCkanRedirection: false
 
 helmet:
   frameguard: false
