--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -13,6 +13,9 @@ global:
 
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
+  ckanRedirectionPath: ""
+  enableCkanRedirection: true
+  enableAuthEndpoint: true
   enableAuthEndpoint: true
   cors:
     credentials: true
