--- a/deploy/helm/preview.yml
+++ b/deploy/helm/preview.yml
@@ -22,6 +22,7 @@ gateway:
     enabled: false
   enableAuthEndpoint: true
   enableHttpsRedirection: true
+  enableCkanRedirection: true
   ckanRedirectionDomain: "ckan.data.gov.au"
   ckanRedirectionPath: ""
   helmet:
