--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -34,10 +34,12 @@
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-form-data": "^1.0.0",
     "jsonwebtoken": "^7.4.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "morgan": "^1.6.1",
     "node-http-proxy": "^0.2.3",
     "passport": "^0.2.2",
+    "passport-custom": "^1.0.5",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
