--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -14,9 +14,10 @@ global:
   noDbAuth: false
   namespace: default
   gapiIds: []
+  enablePriorityClass: false
 
 tags:
-  priorities: true
+  priorities: false
   all: true
   apidocs-server: false
   admin-api: false
