--- a/deploy/helm/minikube-dev.yml
+++ b/deploy/helm/minikube-dev.yml
@@ -10,6 +10,7 @@ global:
   noDbAuth: true
   useCloudSql: false
   useCombinedDb: true
+  enablePriorityClass: false
 
 gateway:
   ckanRedirectionDomain: "ckan.data.gov.au"
