--- a/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/admin-api/templates/deployment.yaml
@@ -11,7 +11,9 @@ spec:
       labels:
         service: admin-api
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-7
+{{- end }}
       containers:
       - name: admin-api
         image: {{ template "dockerimage" . }}
