--- a/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/authorization-api/templates/deployment.yaml
@@ -12,7 +12,9 @@ spec:
       labels:
         service: authorization-api
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-8
+{{- end }}
       containers:
       - name: authorization-api
         image: {{ template "dockerimage" . }}
