--- a/deploy/helm/magda/charts/content-api/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/content-api/templates/deployment.yaml
@@ -13,7 +13,9 @@ spec:
       labels:
         service: content-api
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-8
+{{- end }}
       containers:
       - name: content-api
         image: {{ template "dockerimage" . }}
