--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -11,7 +11,9 @@ spec:
       labels:
         service: gateway
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-10
+{{- end }}
       containers:
       - name: gateway
         image: {{ template "dockerimage" . }}
