--- a/deploy/helm/magda/charts/indexer/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/indexer/templates/deployment.yaml
@@ -12,7 +12,9 @@ spec:
       labels:
         service: indexer
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-7
+{{- end }}
       containers:
       - name: indexer
         env:
