--- a/deploy/helm/magda/charts/priorities/templates/magda-10.yaml
+++ b/deploy/helm/magda/charts/priorities/templates/magda-10.yaml
@@ -1,4 +1,4 @@
-{{- if .Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1" }}
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
 apiVersion: scheduling.k8s.io/v1beta1
 kind: PriorityClass
 metadata:
