--- a/deploy/helm/magda/charts/session-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/session-db/templates/statefulset.yaml
@@ -14,7 +14,9 @@ spec:
       labels:
         service: session-db
     spec:
+{{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") .Values.global.enablePriorityClass }}
       priorityClassName: magda-9
+{{- end }}
       terminationGracePeriodSeconds: 60
       affinity:
 {{- if .Values.affinity }}
