revert the default value of `tags.priorities` back to true

--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -17,7 +17,7 @@ global:
   enablePriorityClass: false
 
 tags:
-  priorities: false
+  priorities: true
   all: true
   apidocs-server: false
   admin-api: false
