Issue/2009 CSW connector does not capture all distributions for some datasources (e.g. TERN)  (#2017)
* made CSW connector search for `MD_DigitalTransferOptions` from any jsonpath

* adding test cases

* Added black-box test for tern data source to verify whether all distribution are captured now

* Add Test for CSW data source: Department of the Environment and Energy

* UPDATE: readme.md

* Make sure error will probably flow through promise chain

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,6 +69,21 @@
             "type": "node",
             "request": "launch",
             "protocol": "inspector",
+            "name": "CSW Connector Test Cases",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "cwd": "${workspaceRoot}/magda-csw-connector",
+            "args": [
+                "--compilers",
+                "ts:ts-node/register",
+                "--require",
+                "tsconfig-paths/register",
+                "src/test/**/*.spec.ts"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "protocol": "inspector",
             "name": "Minion Format",
             "runtimeExecutable":
                 "${workspaceRoot}/scripts/node_modules/.bin/ts-node",
