--- a/magda-web-server/package.json
+++ b/magda-web-server/package.json
@@ -37,7 +37,7 @@
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
     "typed-promisify": "^0.4.0",
-    "typescript": "~2.5.0",
+    "typescript": "^2.7.2",
     "xml2js": "^0.4.19"
   },
   "dependencies": {
