--- a/magda-correspondence-api/package.json
+++ b/magda-correspondence-api/package.json
@@ -64,7 +64,7 @@
     "nock": "^9.2.5",
     "sinon": "^5.0.7",
     "supertest": "^3.0.0",
-    "typescript": "~2.5.0"
+    "typescript": "^2.7.2"
   },
   "config": {
     "docker": {
