--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -30,7 +30,7 @@
     "@types/yargs": "^12.0.8",
     "nock": "^10.0.0",
     "ts-loader": "^2.3.7",
-    "typescript": "~2.5.0",
+    "typescript": "^2.7.2",
     "webpack": "^3.6.0"
   },
   "dependencies": {
