--- a/magda-dap-connector/package.json
+++ b/magda-dap-connector/package.json
@@ -28,7 +28,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "ts-loader": "^2.3.7",
-    "typescript": "~2.5.0",
+    "typescript": "^2.7.2",
     "webpack": "^3.6.0"
   },
   "dependencies": {
