--- a/magda-project-open-data-connector/package.json
+++ b/magda-project-open-data-connector/package.json
@@ -24,7 +24,7 @@
     "@types/urijs": "^1.15.34",
     "@types/yargs": "^12.0.8",
     "ts-loader": "^2.3.7",
-    "typescript": "~2.5.0",
+    "typescript": "^2.7.2",
     "webpack": "^3.6.0"
   },
   "dependencies": {
