--- a/magda-scss-compiler/package.json
+++ b/magda-scss-compiler/package.json
@@ -36,7 +36,7 @@
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
     "sinon": "^2.4.1",
-    "typescript": "~2.5.0"
+    "typescript": "^2.7.2"
   },
   "dependencies": {
     "@magda/typescript-common": "^0.0.52-0",
