--- a/scripts/package.json
+++ b/scripts/package.json
@@ -52,7 +52,7 @@
     "toposort": "^1.0.6",
     "ts-node": "^3.0.4",
     "tsconfig-paths": "^2.2.0",
-    "typescript": "~2.5.0",
+    "typescript": "^2.7.2",
     "uniqid": "^5.0.3",
     "yargs": "^12.0.5"
   }
